2010-03-10  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-lookup-http-start-function):
	Don't use `booleanp' to work on Emacs21.

	* twittering-mode.el (twittering-mode-map): Use `kbd' macro same
	as other keymaps.

	* twittering-mode.el (twittering-goto-next-status): Show a
	progress message.
	(twittering-goto-previous-status): Likewise.
	
2010-03-09  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-redisplay-status-on-buffer): call
	`func' with the region.
	(twittering-make-passed-time-string): restore the original
	properties.

	* twittering-mode.el (twittering-timeline-data-table): store ID
	table and referring ID table, too.
	(twittering-current-timeline-id-table): new function.
	(twittering-add-statuses-to-timeline-data): store updated ID
	tables.

	* twittering-mode.el (twittering-generate-status-formater-base):
	redisplay filled string including substring that should be
	redisplayed.
	(twittering-update-filled-string): new function for updating
	filled string with `need-to-be-update' property.

2010-03-07  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-edit-replace-at-point): New defun
	to call `twittering-edit-length-check' forcefully.
	(twittering-edit-mode-map): Bind F4 to it instead of
	`twittering-tinyurl-replace-at-point'.
	(twittering-edit-length-check): Make all arguments optional.

2010-03-06  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-server-info-alist): new variable
	for storing server information.
	(twittering-http-status-line-regexp): removed.

	* twittering-mode.el (twittering-display-remaining): new variable
	for specifying whether the remaining of rate limit should be
	displayed on the mode line or not.
	(twittering-update-mode-line): display the remaining of rate limit
	if `twittering-display-remaining' is non-nil.
	(twittering-get-ratelimit-remaining): new function.
	(twittering-get-ratelimit-limit): new function.
